samples/glossentry/valid/R16.dita
<?xml version="1.0" encoding="UTF-8"?>
<glossentry>
  <glossterm>Term</glossterm>
  <glossdef><p>Definition in a p.</p></glossdef>
</glossentry>