samples/glossentry/invalid/R12.dita
<?xml version="1.0" encoding="UTF-8"?>
<glossentry>
  <glossterm>Term</glossterm>
  <glossdef><p>Definition.</p></glossdef>
  <glossBody>
    <glossUsage>Usage 1</glossUsage>
    <glossUsage>Usage 2</glossUsage>
  </glossBody>
</glossentry>